--- a/PROGRAM/app/src/main/res/values/colors.xml
+++ b/PROGRAM/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="white">#FFFFFFFF</color>
 
     <!--    warna apk -->
-    <color name="Base">#00B8B3</color>
+    <color name="Base">#004AAD</color>
 
 </resources>
