--- a/PROGRAM/app/src/main/res/layout/activity_detail.xml
+++ b/PROGRAM/app/src/main/res/layout/activity_detail.xml
@@ -18,6 +18,7 @@
         android:textColor="@color/Base"
         android:textSize="28sp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16sp"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +47,7 @@
         android:textSize="12sp"
         android:padding="12dp"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/detailImage"/>
