--- a/PROGRAM/app/src/main/res/layout/item_layout.xml
+++ b/PROGRAM/app/src/main/res/layout/item_layout.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/title"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="bold"
             android:text="Title"
