--- a/PROGRAM/app/src/main/res/layout/fragment_home.xml
+++ b/PROGRAM/app/src/main/res/layout/fragment_home.xml
@@ -46,6 +46,7 @@
                 android:id="@+id/img_headline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:src="@drawable/laut_indonesia" />
         </FrameLayout>
 
