clara : menambahkan ScrollView dan TeksView pada fragment_btn

--- a/PROGRAM/app/src/main/res/layout/fragment_btn.xml
+++ b/PROGRAM/app/src/main/res/layout/fragment_btn.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <FrameLayout
             android:id="@+id/art_SeaInfo"
             android:layout_width="match_parent"
@@ -23,31 +24,74 @@
             <ImageView
                 android:id="@+id/imageinfo2"
                 android:layout_width="wrap_content"
-                android:layout_height="200dp"
+                android:layout_height="190dp"
                 android:layout_margin="10dp"
                 android:src="@drawable/laut2" />
         </FrameLayout>
 
-        <FrameLayout
-            android:id="@+id/isi_info"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_margin="15dp"
+        <ScrollView
+            android:layout_width="400dp"
+            android:layout_height="317dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/art_SeaInfo">
 
-            <TextView
-
-                android:id="@+id/text_informasi"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:text="@string/informasi_laut">
-            </TextView>
+                android:layout_margin="10dp"
+                android:orientation="vertical">
 
-        </FrameLayout>
+                <TextView
+                    android:id="@+id/text_informasi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_extrabold"
+                    android:text="@string/informasi_text"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/text_informasi2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="@string/informasi_text2" />
+
+                <TextView
+                    android:id="@+id/text_informasi3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_extrabold"
+                    android:text="@string/informasi_text3"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/text_informasi3a"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="@string/informasi_text3a" />
+
+                <TextView
+                    android:id="@+id/text_informasi4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_extrabold"
+                    android:text="@string/informasi_text4"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/text_informasi4a"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="@string/informasi_text3a" />
+            </LinearLayout>
+        </ScrollView>
+
 
         <TextView
             android:id="@+id/text_info"
