--- a/PROGRAM/app/src/main/res/values/colors.xml
+++ b/PROGRAM/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="title_color">#FF00B8B3</color>
+    <color name="title_color">#004AAD</color>
     <color name="gray">#B4B4B8</color>
 </resources>
