--- a/PROGRAM/app/src/main/res/layout/fragment_btn.xml
+++ b/PROGRAM/app/src/main/res/layout/fragment_btn.xml
@@ -163,6 +163,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Sea Information"
+            android:fontFamily="@font/poppins_extrabold"
             android:textStyle="bold"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
